# cmake-examples

./: .gitignore  README.md
linking_libraries/DirectUse_GTest/: CMakeLists.txt
linking_libraries/FetchContent_GTest/: CMakeLists.txt  README.rst  main.cpp
linking_libraries/directly_GTest/: CMakeLists.txt  README.rst  googletest_placeholder.txt  main.cpp
project_templates/: README.rst
project_templates/example_1/: CMakeLists.txt  README.rst  main.cpp
project_templates/example_1/Application/: CMakeLists.txt  sources.cmake
project_templates/example_1/Application/Sources/Application/: DummyClass.cpp
project_templates/example_1/FetchContent/: googletest.cmake
project_templates/example_1/Tests/: Tests.cpp  main.cpp
project_templates/example_1/readme_md/: README.md
project_templates/example_2/: CMakeLists.txt  README.rst
project_templates/example_2/FetchContent/: Boost.cmake
project_templates/example_2/Sources/: CMakeLists.txt  main.cpp
project_templates/example_2/Sources/Main/: CMakeLists.txt  sources.cmake
project_templates/example_2/Sources/Main/Sources/: main.cpp
project_templates/example_2/Sources/Module1/: CMakeLists.txt  sources.cmake
project_templates/example_2/Sources/ModuleX/: CMakeLists.txt  sources.cmake
project_templates/example_2/Sources/ModuleX/Sources/ModuleX/: DummyClass.hpp
